--- a/Array.html
+++ b/Array.html
@@ -1,40 +1,112 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body style="background-color: grey; color: white;">
-    
-</body>
-<script>
+  </head>
+  <body style="background-color: grey; color: white"></body>
+  <script>
     //total number in array
 
-    let arr = ["1", "2", "3", "4", "5"]
+    let arr = ["1", "2", "3", "4", "5"];
 
     //console.log(arr.length)
 
-    //even count 
-    let totalNum = ["1", "2", "3", "4", "5", "10", "11", "4"]
-    let evenCount = []; 
+    //even count
+    let totalNum = ["1", "2", "3", "4", "5", "10", "11", "4"];
+    let evenCount = [];
     let oddCount = [];
-   for (let i = 0; i < totalNum.length; i++) {
-        let number = parseInt(totalNum[i]);
-  
-        if (!isNaN(number) && number %2 === 0 ) {
-            evenCount.push(number);
-        }
-        else {
-            oddCount.push(number);
-        }
-}
-console.log("total Count = "+ totalNum.length);
-console.log("evenCount = "+evenCount.join(","));
-console.log("oddCount = "+oddCount.join(","));
+    for (let i = 0; i < totalNum.length; i++) {
+      let number = parseInt(totalNum[i]);
 
+      if (!isNaN(number) && number % 2 === 0) {
+        evenCount.push(number);
+      } else {
+        oddCount.push(number);
+      }
+    }
+    // console.log("total Count = "+ totalNum.length);
+    // console.log("evenCount = "+evenCount.join(","));
+    // console.log("oddCount = "+oddCount.join(","));
 
-</script>
+    //second method
+    let totalN = ["1", "2", "3", "4", "5", "6", "7", "8"];
+    let evenNum = 0;
+    let oddNum = 0;
+
+    for (let i = 0; i < totalN.length; i++) {
+      let changeNum = parseInt(totalN[i]);
+      if (!isNaN(changeNum) && changeNum % 2 === 0) {
+        evenNum++;
+      } else {
+        oddNum++;
+      }
+    }
+    // console.log("evennumber = "+evenNum);
+    // console.log("oddnumber = "+oddNum);
+
+    //sum all numbers
+    let totalvalue = ["1", "2", "3", "4", "15", "16", "7", "8"];
+    let sum = 0;
+    for (let i = 1; i < totalvalue.length; i++) {
+      let number = parseInt(totalvalue[i]);
+      sum += number;
+    }
+    //console.log(sum);
+
+    //sum even numbers
+
+    let totalAll = ["1", "2", "3", "4", "15", "16", "7", "8"];
+    let sumEven = 0;
+    let sumOdd = 0;
+
+    for (let i = 1; i < totalAll.length; i++) {
+      let number = parseInt(totalvalue[i]);
+
+      if (!isNaN(number) && number % 2 === 0) {
+        sumEven += number;
+      } else {
+        sumOdd += number;
+      }
+    }
+    //console.log(sumEven);
+    //console.log(sumOdd);
+
+    let arr1 = ["1", "2", "3", "4", "15", "16", "7", "8"];
+    let arr2 = ["1", "2", "3", "4", "15", "16", "7", "8"];
+    let arr3 = [];
+
+    if (arr1.length === arr2.length) {
+      for (let i = 0; i < arr1.length; i++) {
+        let num1 = parseFloat(arr1[i]);
+        let num2 = parseFloat(arr2[i]);
+
+        let sum = num1 + num2;
+
+        arr3.push(sum);
+      }
+      //console.log(arr3.join(","));
+    } else {
+      //console.log("it is not define");
+    }
+
+    //largest smallest number i a array
+    let randomArray = ["-1", "2", "3", "4", "15", "16", "7", "8"];
+
+    let maxNum = parseFloat(randomArray[0]);
+    for (let i = 0; i < randomArray.length; i++) {
+      let currNum = parseFloat(randomArray[i]);
+      if (currNum < maxNum) {
+        maxNum = currNum;
+      }
+    }
+    console.log(maxNum);
+
+    let a = ["1", "2", "3", "4", "15", "16", "7", "8"];
+
+    for (let i = a.length - 1; i >= 0; i--) {
+      console.log(a[i]);
+    }
+  </script>
 </html>
