--- a/Array.html
+++ b/Array.html
@@ -101,12 +101,26 @@
         maxNum = currNum;
       }
     }
-    console.log(maxNum);
+    //console.log(maxNum);
 
     let a = ["1", "2", "3", "4", "15", "16", "7", "8"];
 
     for (let i = a.length - 1; i >= 0; i--) {
-      console.log(a[i]);
+      //console.log(a[i]);
     }
+
+
+    // devied by 7
+
+    let sumNum = 0;
+    for (let i = 1; i < 100; i++) {
+      if (i % 7 === 0) {
+        sumNum++
+      }
+    }
+    console.log(sumNum)
+
+    
+    
   </script>
 </html>
